# obs-studio

./: .gitmodules  CMakeLists.txt
UI/: CMakeLists.txt  controlpanel.cpp  controlpanel.h  debug-console.cpp  debug-console.hpp  obs-app.cpp  sharedwebsocket.cpp  sharedwebsocket.h  streammatchinfomanager.h  window-basic-settings.cpp  window-projector.cpp  window-projector.hpp
UI/frontend-plugins/frontend-tools/: scripts.hpp
match-connection/: CMakeLists.txt  matchconnectionglobal.h  reconnectingsocket.cpp  reconnectingsocket.h
match-info-manager/: CMakeLists.txt  streammatchinfomanager.cpp  streammatchinfomanager.h
obs-connection/: CMakeLists.txt  reconnectingsocket.cpp  reconnectingsocket.h
plugins/: CMakeLists.txt
